Added entire website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-<html>Test</html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" lang="en">
+    <link rel="alternate" type="application/rss+xml" href="feed.xml" title="Apoorva Joshi">
+    <link rel="stylesheet" id="style" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+<div class="header">
+    <a href="http://apoorvaj.io/">apoorvaj.io</a>
+    <div style="float:right;">
+        <a href="about.html">about</a>,
+        <a href="cv.html">cv</a>
+    </div>
+</div>
+
+
+<article>
+<title>apoorvaj.io</title>
+<h1>Apoorva Joshi</h1>
+
+<p class="subtitle">graphics/systems programmer at <a href="http://playdead.com/">Playdead</a></p>
+
+<p class="subtitle"><a href="mailto:apoorvaj@apoorvaj.io">email</a>, <a href="https://github.com/ApoorvaJ">github</a>, <a href="https://twitter.com/ApoorvaJ">twitter</a></p>
+
+<hr>
+
+<section>
+    <h2>Publications</h2>
+    <table class="fullwidth">
+        <tr><td><i>14-Feb-2018</i></td><td><a href="http://www.jcgt.org/published/0007/01/01/">Efficient Rendering of Linear Brush Strokes</a> - <i>Journal of Computer Graphics Techniques</i></td></tr>
+    </table>
+</section>
+
+
+<section>
+    <h2>Blog</h2>
+    <style>th, td {padding: 0 0 0 10px;} </style>
+    <table class="fullwidth">
+        <tr><td><i>01-Feb-2019</i></td><td><a href="cubic-bezier-through-four-points.html">Constructing a cubic Bezier that passes through four points</a></td></tr>
+        <!-- <tr><td><i>24-Jun-2018</i></td><td><a href="tldr-artistic-style-transfer.html">TLDR: Artistic Style Transfer</a></td></tr> -->
+        <tr><td><i>02-Apr-2018</i></td><td><a href="single-header-packer.html">Single-Header Packer</a></td></tr>
+
+        <tr><td><i>14-Feb-2018</i></td><td><a href="efficient-rendering-of-linear-brush-strokes.html">Efficient Rendering of Linear Brush Strokes—my graphics paper explained</a></td></tr>
+
+        <!-- <tr><td><i>13-Feb-2018</i></td><td><a href="how-not-to-suck-at-tmux.html">How not to suck at tmux</a></td></tr> -->
+        <tr><td><i>25-Sep-2017</i></td><td><a href="creating-a-modern-opengl-context.html">Creating a modern OpenGL context</a></td></tr>
+
+        <tr><td><i>04-Mar-2017</i></td><td><a href="exploring-bump-mapping-with-webgl.html">Exploring bump mapping with WebGL</a></td></tr>
+
+        <tr><td><i>30-Nov-2016</i></td><td><a href="hitchhikers-guide-to-the-gdb.html">Hitchhiker's Guide to the GDB</a></td></tr>
+
+        <tr><td><i>04-Sep-2016</i></td><td><a href="exploring-calling-conventions.html">Exploring calling conventions with x86 assembly</a></td></tr>
+
+        <tr><td><i>20-Aug-2016</i></td><td><a href="loading-opengl-without-glew.html">Loading OpenGL without GLEW</a></td></tr>
+
+        <tr><td><i>13-Aug-2016</i></td><td><a href="native-ui-is-dead.html">Native UI is dead, long live native UI</a></td></tr>
+
+        <tr><td><i>30-Dec-2015</i></td><td><a href="alpha-compositing-opengl-blending-and-premultiplied-alpha.html">Alpha Compositing, OpenGL Blending and Premultiplied Alpha</a></td></tr>
+
+        <tr><td><i>03-Jul-2015</i></td><td><a href="building-a-fast-modern-image-editor.html">Building a Fast, Modern Image Editor</a></td></tr>
+
+        <!-- <tr><td><i>13-Aug-2011</i></td><td><a href="android-game-architecture.html">Android Game Architecture</a></td></tr> -->
+    </table>
+</section>
+
+
+<h1>Work</h1>
+
+<section>
+    <p>At Playdead, I work on graphics, GPU and CPU optimization, and tools targeted at artists.</p>
+
+    <p>At NVIDIA, I worked on CUDA profiling tools, including nvprof, the NVIDIA Visual Profiler, and the CUPTI library. This work involved working on the full GPU stack—silicon, drivers, profiling libraries, GUI.</p>
+
+    <p>My open-source work includes <a href="https://github.com/ApoorvaJ/EasyTab">EasyTab</a>, a single-header multiplatform library for drawing-tablet input, <a href="https://github.com/ApoorvaJ/Papaya/blob/ec8baaa866b74a6469ec2640f5960f55ec234805/src/libpapaya/gl_lite.h">gl_lite</a>, a single-header lightweight OpenGL loader, and <a href="https://github.com/ApoorvaJ/tiny-jpeg-rs">tiny-jpeg-rs</a>, a ported JPEG-encoding library written in the Rust language.</p>
+
+    <p><a href="https://github.com/ApoorvaJ/Papaya">Papaya</a> is a cross-platform image editor that I've been working on for a long time. It is built in OpenGL and C99. I've periodically spun out useful code from this project into smaller libraries and research.</p>
+    <p><a href="http://socioballthegame.com">Socioball</a> was my first commercial game. I was the solo programmer on the two-person team that made the game. I began work on the shippable version—which is built in Unity—during my Bachelor's degree. Before this version, I had built a prototype of the same game in C# and XNA, including a custom deterministic game-specific physics engine.</p>
+</section>
+
+</article>
+
+<hr style="margin: 0 0 0.5rem 0"/>
+<div class="footer"><div style="float:right;"><a href="mailto:apoorvaj@apoorvaj.io">email</a>, <a href="https://github.com/ApoorvaJ">github</a>, <a href="https://twitter.com/ApoorvaJ">twitter</a></div></div>
+
+<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-18556434-3', 'auto'); ga('send', 'pageview'); </script>
+</body>
+</html>
