--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <h2>Blog</h2>
     <style>th, td {padding: 0 0 0 10px;} </style>
     <table class="fullwidth">
+        <tr><td><i>15-Jun-2019</i></td><td><a href="alpha-compositing-opengl-blending-and-premultiplied-alpha.html">Alpha compositing, OpenGL blending and premultiplied alpha</a></td></tr>
+
         <tr><td><i>01-Feb-2019</i></td><td><a href="cubic-bezier-through-four-points.html">Constructing a cubic Bezier that passes through four points</a></td></tr>
         <!-- <tr><td><i>24-Jun-2018</i></td><td><a href="tldr-artistic-style-transfer.html">TLDR: Artistic Style Transfer</a></td></tr> -->
         <tr><td><i>02-Apr-2018</i></td><td><a href="single-header-packer.html">Single-Header Packer</a></td></tr>
@@ -56,8 +58,6 @@
         <tr><td><i>20-Aug-2016</i></td><td><a href="loading-opengl-without-glew.html">Loading OpenGL without GLEW</a></td></tr>
 
         <tr><td><i>13-Aug-2016</i></td><td><a href="native-ui-is-dead.html">Native UI is dead, long live native UI</a></td></tr>
-
-        <tr><td><i>30-Dec-2015</i></td><td><a href="alpha-compositing-opengl-blending-and-premultiplied-alpha.html">Alpha Compositing, OpenGL Blending and Premultiplied Alpha</a></td></tr>
 
         <tr><td><i>03-Jul-2015</i></td><td><a href="building-a-fast-modern-image-editor.html">Building a Fast, Modern Image Editor</a></td></tr>
 
